--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   align-items: center;
   width: 100vw;
   background-color: #000 !important;
+  font-family: 'Righteous', 'Roboto', sans-serif;
 }
 
 #root {
