--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Righteous';
+  src: url('https://fonts.googleapis.com/css2?family=Righteous&display=swap')
+    format('truetype');
+}
+
 * {
   margin: 0;
   padding: 0;
