--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Righteous';
-  src: url('https://fonts.googleapis.com/css2?family=Righteous&display=swap')
-    format('truetype');
+  src: url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 }
 
 * {
